--- a/OzricUI/Components/GraphNodeComponent.razor
+++ b/OzricUI/Components/GraphNodeComponent.razor
@@ -51,6 +51,7 @@
                                 
                             case ValueType.Mode:
                                 <img src="icons/@(port.valueType).png" width="16" height="16"/>
+                                <span>@(pin.value)</span>
                                 break;
                                 
                             default:
