--- a/OzricUI/Components/ValueEditorComponent.razor
+++ b/OzricUI/Components/ValueEditorComponent.razor
@@ -122,6 +122,7 @@
             return;
 
         color = (ColorValue) result.Data;
+        OnEdited.InvokeAsync(color);
         StateHasChanged();
     }
 
