--- a/OzricUI/Components/ColorValuePicker.razor
+++ b/OzricUI/Components/ColorValuePicker.razor
@@ -11,11 +11,11 @@
         @switch (_colorMode)
         {
             case ColorMode.HS:
-                <MudSlider T="int" Value="@_h" Max="H_SCALE" Immediate="true" ValueChanged="OnSliderHChanged">Hue: @_h.ToString()</MudSlider>
-                <MudSlider T="int" Value="@_s" Max="S_SCALE" Immediate="true" ValueChanged="OnSliderSChanged">Saturation: @_s.ToString()</MudSlider>
+                <MudSlider T="int" Value="_h" Max="H_SCALE" Immediate="true" ValueChanged="OnSliderHChanged">Hue: @_h.ToString()</MudSlider>
+                <MudSlider T="int" Value="_s" Max="S_SCALE" Immediate="true" ValueChanged="OnSliderSChanged">Saturation: @_s.ToString()</MudSlider>
                 break;
             case ColorMode.Temp:
-                <MudSlider T="int" Value="@_temp" Min="50" Max="500" Immediate="true" ValueChanged="OnSliderTChanged">Temperature: @_temp.ToString()</MudSlider>
+                <MudSlider T="int" Value="_temp" Min="50" Max="500" Immediate="true" ValueChanged="OnSliderTChanged">Temperature: @_temp.ToString()</MudSlider>
                 break;
             case ColorMode.RGB:
                 <MudSlider T="int" Value="_r" Max="RGB_SCALE" Immediate="true" ValueChanged="OnSliderRChanged">Red: @_r.ToString()</MudSlider>
@@ -23,8 +23,8 @@
                 <MudSlider T="int" Value="_b" Max="RGB_SCALE" Immediate="true" ValueChanged="OnSliderBChanged">Blue: @_b.ToString()</MudSlider>
                 break;
             case ColorMode.XY:
-                <MudSlider T="float" Value="@_x" Max="100" Immediate="true" ValueChanged="OnSliderXChanged">X: @_x.ToString()</MudSlider>
-                <MudSlider T="float" Value="@_y" Max="100" Immediate="true" ValueChanged="OnSliderYChanged">Y: @_y.ToString()</MudSlider>
+                <MudSlider T="float" Value="_x" Max="100" Immediate="true" ValueChanged="OnSliderXChanged">X: @_x.ToString()</MudSlider>
+                <MudSlider T="float" Value="_y" Max="100" Immediate="true" ValueChanged="OnSliderYChanged">Y: @_y.ToString()</MudSlider>
                 break;
             default:
                 throw new ArgumentOutOfRangeException();
@@ -32,9 +32,8 @@
 
         <MudDivider DividerType="DividerType.Middle" Class="my-2"/>
 
-        <MudSlider @bind-Value="_brightness" Min="0" Max="BRIGHTNESS_SCALE">
-            Brightness: @_brightness.ToString()
-        </MudSlider>
+        <MudSlider T="int" Value="_brightness" Min="0" Max="BRIGHTNESS_SCALE" Immediate="true" ValueChanged="OnBrightnessChanged">Brightness: @_brightness.ToString()</MudSlider>
+
         <p class="mud-input-helper-text">Brightness is not affected by the color luminance.</p>
                             
         <MudSelect Value="_previewLight" Style="z-index:9999;" ValueChanged="OnPreviewLightChanged" HelperText="Choose a light to directly preview the color" T="Light?" Label="Preview Light" Variant="Variant.Text">
@@ -59,6 +58,11 @@
 
     [Parameter]
     public ColorValue Value { get; set; }
+    
+    [Parameter]
+    public EventCallback<ColorValue> Picked { get; set; }
+
+    ColorValue _color;
 
     private List<Light> _lights;
     private MudColor _pickerColor { get; set; }
@@ -99,7 +103,6 @@
         _timer.Elapsed += TimerCallback;
         _timer.Enabled = true;
     }
-
     
     private async void TimerCallback(object o, ElapsedEventArgs elapsedEventArgs)
     {
@@ -191,21 +194,25 @@
 
     private void OnSliderTChanged(int t) { _temp = t; OnColorSlidersChanged(); }
 
+    private void OnBrightnessChanged(int b) { _brightness = b; OnColorSlidersChanged(); }
+
     private void OnColorSlidersChanged()
     {
         if (!_settingSliders)
         {
-            var value = GetColorSliders();
+            _color = GetColorSliders();
 
             _settingPicker = true;
             try
             {
-                _pickerColor = value.ToHexString();
+                _pickerColor = _color.ToHexString();
             }
             finally
             {
                 _settingPicker = false;
             }
+
+            Picked.InvokeAsync(_color);
         }
     }
 
@@ -289,3 +296,4 @@
     }
 
 }
+    
