--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -60,7 +60,11 @@
         <MudButton StartIcon="@Icons.Material.Filled.Cancel" Variant="Variant.Filled" Color="Color.Primary" @onclick="OnClickDone" Disabled="@(Saving || !IsEditing)" hidden="@(!IsEditing)"> 
             Done
         </MudButton>
-               
+
+        <MudButton StartIcon="@Icons.Material.Filled.DataExploration" Variant="Variant.Filled" Color="Color.Primary" OnClick="@OnClickData" Disabled="@IsEditing" Hidden="@IsEditing">
+            Data
+        </MudButton>
+                
         <MudButton Color="Color.Tertiary" Variant="Variant.Filled"  @onclick="OnClickSave" Disabled="@(Saving || !IsChanged)" hidden="@(!IsEditing)">
             @if (Saving)
             {
@@ -268,30 +272,26 @@
         });
     }
 
-    private void OnClickSave()
+    private async Task OnClickSave()
     {
         if (GraphLayout == null)
             throw new Exception();
 
         GraphEditState.OnSaving();
-        _ = Task.Run(async () =>
+        try
         {
-            try
-            {
-                await Task.Delay(100);
-                await OzricService.Restart(Graph);
-                await Data.SetGraphLayoutAsync(GraphLayout);
-                await InvokeAsync(() => GraphEditState.DoCommand(GraphEditState.Command.SetCheckpoint));
-            }
-            catch (Exception e)
-            {
-                Console.Error.WriteLine(e.ToString());
-            }
-            finally
-            {
-                await InvokeAsync(() => GraphEditState.OnEdit());
-            }
-        });
+            await OzricService.Restart(Graph);
+            await Data.SetGraphLayoutAsync(GraphLayout);
+            await InvokeAsync(() => GraphEditState.DoCommand(GraphEditState.Command.SetCheckpoint));
+        }
+        catch (Exception e)
+        {
+            Console.Error.WriteLine(e.ToString());
+        }
+        finally
+        {
+            await InvokeAsync(() => GraphEditState.OnEdit());
+        }
     }
 
     private void OnClickUndo()
@@ -372,6 +372,28 @@
 
         GraphEditState.DoAction(new GraphEditAction.EditActions(changes));
         StateHasChanged();
+    }
+    
+    private async Task OnClickData()
+    {
+        var parameters = new DialogParameters
+        {
+            { "Graph", Json.Prettify(Json.Serialize(Graph)) },
+            { "GraphLayout", Json.Prettify(Json.Serialize(GraphLayout)) }
+        };
+
+        var options = GetDialogOptions();
+
+        var result = await DialogService.Show(typeof(DataDialog), "Raw Data", parameters, options).Result;
+        if (result.Cancelled)
+            return;
+
+        var json = result.Data as DataDialog.Result;
+
+        Graph = Json.Deserialize<Graph>(json.graph);
+        GraphLayout = Json.Deserialize<GraphLayout>(json.graphLayout);
+        
+        await OnClickSave();
     }
 
     private static DialogOptions GetDialogOptions()
