--- a/OzricUI/Components/AddNodesDialog.razor
+++ b/OzricUI/Components/AddNodesDialog.razor
@@ -3,38 +3,33 @@
 <MudDialog>
     <DialogContent>
 
-    <MudChipSet Filter="true" SelectedChipsChanged="OnSelectionChanged" Mandatory="true" >
-            
-        <MudChip Text="All" Default="true"></MudChip>
-        <MudChip Text="Environment" Value="Category.Environment" />
-        <MudChip Text="Sensors" Value="Category.Sensor" />
-        <MudChip Text="Modes" Value="Category.ModeSensor" />
-        <MudChip Text="Lights" Value="Category.Light"  />
-        <MudChip Text="Switches" Value="Category.Switch" />
-        <MudChip Text="Media Players" Value="Category.MediaPlayer"  />
-        <MudChip Text="Logic" Value="Category.Logic" />
-        <MudChip Text="Constant" Value="Category.Constant" />
-        <MudChip Text="People" Value="Category.Person" />
+        <MudChipSet Filter="true" SelectedChipsChanged="OnSelectionChanged" Mandatory="true" >
+                
+            <MudChip Text="All" Default="true"></MudChip>
+            <MudChip Text="Environment" Value="Category.Environment" />
+            <MudChip Text="Sensors" Value="Category.Sensor" />
+            <MudChip Text="Modes" Value="Category.ModeSensor" />
+            <MudChip Text="Lights" Value="Category.Light"  />
+            <MudChip Text="Switches" Value="Category.Switch" />
+            <MudChip Text="Media Players" Value="Category.MediaPlayer"  />
+            <MudChip Text="Logic" Value="Category.Logic" />
+            <MudChip Text="Constant" Value="Category.Constant" />
+            <MudChip Text="People" Value="Category.Person" />
 
-    </MudChipSet>
+        </MudChipSet>
 
-    <MudAutocomplete T="string" Label="Search" @bind-Value="Search" SearchFunc="@DoSearch"
-                     ResetValueOnEmptyText="true"
-                     CoerceText="true" CoerceValue="true"/>
+        <MudAutocomplete T="string" Label="Search" @bind-Value="Search" ResetValueOnEmptyText="true" CoerceText="true" CoerceValue="true"/>
 
         <MudContainer Style="max-height: 60vh; overflow-y: scroll">
 
             @foreach (var choice in Choices)
             {
-                if (IsVisible(choice))
-                {
-                    <div class="d-block py-1">
-                        <MudButton Variant="Variant.Filled" OnClick="@(_ => SelectedChoice(choice))">
-                            <span class="iconify" data-icon="@choice.Icon"/>
-                            <span class="px-2">@choice.Name</span>
-                        </MudButton>
-                    </div>
-                }
+                <div class="py-1" style="@ChoiceStyle(choice)">
+                    <MudButton Variant="Variant.Filled" OnClick="@(_ => OnChoiceSelected(choice))">
+                        <span class="iconify" data-icon="@choice.Icon"/>
+                        <span class="px-2">@choice.Name</span>
+                    </MudButton>
+                </div>
             }
 
         </MudContainer>
@@ -64,17 +59,12 @@
 
     void Cancel() => MudDialog.Cancel();
 
-    private Task<IEnumerable<string>> DoSearch(string arg)
-    {
-        return Task.FromResult<IEnumerable<string>>(new List<string>());
-    }
-
     private bool IsVisible(AddNodeChoice choice)
     {
         if (!string.IsNullOrWhiteSpace(Search))
         {
             var terms = Search.Split(" ", StringSplitOptions.TrimEntries | StringSplitOptions.RemoveEmptyEntries);
-            if (!terms.All(term => choice.Name.Contains(term)))
+            if (!terms.All(term => choice.Name.Contains(term, StringComparison.OrdinalIgnoreCase)))
                 return false;
         }
 
@@ -95,10 +85,18 @@
         StateHasChanged();
     }
 
-    private void SelectedChoice(AddNodeChoice choice)
+    private void OnChoiceSelected(AddNodeChoice choice)
     {
         OnAdd.Invoke(choice.Create());
         if (choice.Once)
             Choices.Remove(choice);
+    }
+
+    private object ChoiceStyle(AddNodeChoice choice)
+    {
+        if (!IsVisible(choice))
+            return "display: none";
+
+        return "";
     }
 }
