--- a/OzricUI/Components/SecondsEditorComponent.razor
+++ b/OzricUI/Components/SecondsEditorComponent.razor
@@ -1,6 +1,6 @@
 @using OzricEngine.Values
 @using OzricService
-@using Boolean = OzricEngine.Values.Boolean
+@using Boolean = OzricEngine.Values.Binary
 @using Size = MudBlazor.Size
 
 <MudGrid>
