--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -110,7 +110,7 @@
 </CascadingValue>
 
 @code {
-    bool _settingsDrawerOpen = true;
+    bool _settingsDrawerOpen = false;
     private bool _isDarkMode;
     private MudThemeProvider? _mudThemeProvider;
 
